# travelhack

./: .gitignore  .pre-commit-config.yaml  Makefile  QA.md  README.md  docker-compose.yaml  pyproject.toml
backend/: Makefile
backend/app/: app.py
backend/app/deepfm/: __init__.py  deepfm.py
backend/app/dependencies/: __init__.py  data.py  filters.py  ml.py
backend/app/routers/: filters.py  recommender.py
backend/app/schemas/: filters.py
frontend/: package.json  webpack.config.js
frontend/public/: index.html
frontend/src/: App.js  Router.js  index.js
frontend/src/components/: FilterPanel.js  FilterRow.js  Maps.js  TourCard.js
frontend/src/components/System/: ErrorWindow.js  Header.js  Loader.js  ModalBox.js  Page.js
frontend/src/model/: FilterModel.js  TourModel.js  UserModel.js
frontend/src/pages/HomePage/: HomePage.js  HomePage.scss
frontend/src/pages/System/: NotFound.js
frontend/src/services/: MyError.js  NetworkService.js  RequestService.js
frontend/src/services/common/: constDictionary.js
frontend/src/stores/: FilterStore.js  LoaderStore.js  RecommendationStore.js  config.js
frontend/src/styles/: Config.js  colors.scss  index.scss
frontend/src/styles/fonts/: fonts.scss
scripts/: fit_models.py  prepare_data.py
